--- a/style.css
+++ b/style.css
@@ -107,34 +107,6 @@ body {
   margin-right: auto;
 }
 
-/* Media query for mobile screens */
-@media screen and (max-width: 600px) {
-  .tile {
-    width: var(--tile-size) !important; /* Adjust for mobile */
-    height: var(--tile-size) !important; /* Adjust for mobile */
-    font-size: 24px; /* Adjust font size for mobile */
-    line-height: var(--tile-size); /* Center the text vertically */      
-    margin: 5px;
-    box-shadow: 3px 3px 0px #333; /* Add a shadow to give a lifted effect */
-}
-
-  .draggable-container {
-    margin: 0.2em;
-  }
-
-  #result-message {
-    font-size: 1.25em; /* Large text size for emphasis */
-    height: 1.25em;
-  }
-
-  html, body {
-    overflow: hidden;
-  }
-  body {
-    position: relative;
-  }
-}
-
 /* Additional styles for visual feedback during dragging */
 .draggable--over {
   box-shadow: 8px 8px 0px rgba(0, 0, 0, 0.5);
@@ -154,8 +126,6 @@ body {
 #result-container {
   height: 5em;
 }
-
-
 
 /* Additional styling when the answer is correct */
 .correct-answer {
@@ -190,4 +160,43 @@ body {
   font-size: 2em;
   margin: 1.5em;
   /* Add any additional styling you need here */
+}
+
+/* Media query for mobile screens */
+@media screen and (max-width: 600px) {
+
+  #result-message {
+    padding: 12px 20px;
+
+  }
+
+
+  #timer {
+    margin: 0.75em;
+  }
+  
+  .tile {
+    width: var(--tile-size) !important; /* Adjust for mobile */
+    height: var(--tile-size) !important; /* Adjust for mobile */
+    font-size: 24px; /* Adjust font size for mobile */
+    line-height: var(--tile-size); /* Center the text vertically */      
+    margin: 5px;
+    box-shadow: 3px 3px 0px #333; /* Add a shadow to give a lifted effect */
+}
+
+  .draggable-container {
+    margin: 0.2em;
+  }
+
+  #result-message {
+    font-size: 1.25em; /* Large text size for emphasis */
+    height: 1.25em;
+  }
+
+  html, body {
+    overflow: hidden;
+  }
+  body {
+    position: relative;
+  }
 }
